force-app/main/default/objects/Gift_Officer_Assignment__c/Gift_Officer_Assignment__c.object-meta.xml
<CustomObject>
    <description>Junction assigning an internal staff User to a Contact (donor) as a gift officer, with a Role (Primary Gift Officer, Backup, Solicitor, Committee) so a donor can have multiple relationships. Powers portfolio views. JSI-90 Moves Management. Author: Jason Ott.</description>
    <label>Gift Officer Assignment</label>
    <nameField>
        <displayFormat>GOA-{0000}</displayFormat>
        <label>Gift Officer Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Officer Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>