force-app/main/default/objects/Gift_Officer_Assignment__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this gift-officer assignment is currently active. Deactivate to end an assignment without deleting its history. JSI-90 / Jason Ott.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>