force-app/main/default/objects/Gift_Officer_Assignment__c/fields/Assignment_Key__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Key__c</fullName>
    <description>Backstop against assigning the same officer to the same donor in the same role twice = Contact Id + '|' + User Id + '|' + Role. Unique, case-insensitive. Stamped by a before-save flow. JSI-90 / Jason Ott.</description>
    <externalId>true</externalId>
    <label>Assignment Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>