force-app/main/default/objects/Gift_Officer_Assignment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The donor being assigned to a gift officer. Restrict delete to protect the assignment. JSI-90 / Jason Ott.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift Officer Assignments</relationshipLabel>
    <relationshipName>Gift_Officer_Assignments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>