force-app/main/default/objects/Gift_Officer_Assignment__c/fields/Gift_Officer__c.field-meta.xml
<CustomField>
    <fullName>Gift_Officer__c</fullName>
    <description>The internal staff user assigned to this donor. Restrict delete (deactivate users rather than delete). JSI-90 / Jason Ott.</description>
    <label>Gift Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Gift Officer Assignments</relationshipLabel>
    <relationshipName>Gift_Officer_Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>