force-app/main/default/objects/Gift_Officer_Assignment__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The gift officer's relationship to this donor. Supports multiple assignments per donor (primary + backups + solicitors + committee). JSI-90 / Jason Ott.</description>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Gift Officer</fullName>
                <default>true</default>
                <label>Primary Gift Officer</label>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
            <value>
                <fullName>Committee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>