force-app/main/default/objects/Gift_Officer_Assignment__c/validationRules/Officer_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Officer_Required</fullName>
    <active>true</active>
    <description>A gift-officer assignment must name a Gift Officer (User). Enforced by rule because a lookup to User cannot be a required foreign key. JSI-90 / Jason Ott.</description>
    <errorConditionFormula>ISBLANK(Gift_Officer__c)</errorConditionFormula>
    <errorDisplayField>Gift_Officer__c</errorDisplayField>
    <errorMessage>A Gift Officer is required.</errorMessage>
</ValidationRule>